--- a/.swiftpm/xcode/xcshareddata/xcschemes/Plotty.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/Plotty.xcscheme
@@ -47,7 +47,8 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
-      useCustomWorkingDirectory = "NO"
+      useCustomWorkingDirectory = "YES"
+      customWorkingDirectory = "/Users/sas/Projects/Plotty"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
@@ -64,7 +65,11 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "-i ~/Downloads/input.txt"
+            argument = "-i ./misc/sample-input.txt"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-o ./misc/sample-output.pdf"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
